fixed date and spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,8 @@ body {
     justify-content: center;
     align-items: left;
     margin-top: auto;
+    padding-top: 30px;
+    padding-bottom: 100px;
 }
 
 h1 {
